--- a/SoftwareEngineeringProject/SoftwareEngineeringProject/SoftwareEngineeringProject.csproj
+++ b/SoftwareEngineeringProject/SoftwareEngineeringProject/SoftwareEngineeringProject.csproj
@@ -46,6 +46,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>mp.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -148,6 +151,7 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="mp.ico" />
     <Content Include="Scheduled.mdf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
