--- a/SoftwareEngineeringProject/SoftwareEngineeringProject/SoftwareEngineeringProject.csproj
+++ b/SoftwareEngineeringProject/SoftwareEngineeringProject/SoftwareEngineeringProject.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SoftwareEngineeringProject</RootNamespace>
-    <AssemblyName>SoftwareEngineeringProject</AssemblyName>
+    <AssemblyName>MavPlanner</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <IsWebBootstrapper>false</IsWebBootstrapper>
