Fixed DB connection on a new PC. Created install package.

--- a/SoftwareEngineeringProject/SoftwareEngineeringProject/SoftwareEngineeringProject.csproj
+++ b/SoftwareEngineeringProject/SoftwareEngineeringProject/SoftwareEngineeringProject.csproj
@@ -171,6 +171,7 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="DBlocation.txt" />
     <Content Include="mp.ico" />
     <Content Include="mp_large.ico" />
     <Content Include="Scheduled.mdf">
