--- a/SoftwareEngineeringProject/SoftwareEngineeringProject/Properties/Settings.settings
+++ b/SoftwareEngineeringProject/SoftwareEngineeringProject/Properties/Settings.settings
@@ -26,5 +26,13 @@
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Data Source=mavtester.database.windows.net;Initial Catalog=Scheduled2;User ID=Mavs4life;Password=Mavericks1</Value>
     </Setting>
+    <Setting Name="Scheduled3ConnectionString" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;ConnectionString&gt;Provider=Microsoft.ACE.OLEDB.12.0;Data Source=|DataDirectory|\Scheduled3.accdb&lt;/ConnectionString&gt;
+  &lt;ProviderName&gt;System.Data.OleDb&lt;/ProviderName&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Provider=Microsoft.ACE.OLEDB.12.0;Data Source=|DataDirectory|\Scheduled3.accdb</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
