--- a/SoftwareEngineeringProject/SoftwareEngineeringProject/SoftwareEngineeringProject.csproj
+++ b/SoftwareEngineeringProject/SoftwareEngineeringProject/SoftwareEngineeringProject.csproj
@@ -100,6 +100,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scheduled3DataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Scheduled3DataSet.xsd</DependentUpon>
+    </Compile>
     <None Include="DatabaseQuerie.dbml.layout">
       <DependentUpon>DatabaseQuerie.dbml</DependentUpon>
     </None>
@@ -138,6 +143,17 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="Scheduled3DataSet.xsc">
+      <DependentUpon>Scheduled3DataSet.xsd</DependentUpon>
+    </None>
+    <None Include="Scheduled3DataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>Scheduled3DataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Scheduled3DataSet.xss">
+      <DependentUpon>Scheduled3DataSet.xsd</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
@@ -167,6 +183,9 @@
   <ItemGroup>
     <Content Include="mp.ico" />
     <Content Include="mp_large.ico" />
+    <Content Include="Scheduled3.accdb">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
