We now connect to Azure, we can calculate how many seats. And now we have a display of seats available with asterisks.

--- a/SoftwareEngineeringProject/SoftwareEngineeringProject/SoftwareEngineeringProject.csproj
+++ b/SoftwareEngineeringProject/SoftwareEngineeringProject/SoftwareEngineeringProject.csproj
@@ -66,14 +66,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DatabaseQuerie.cs">
-      <DependentUpon>DatabaseQuerie.dbml</DependentUpon>
-    </Compile>
-    <Compile Include="DatabaseQuerie.designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>DatabaseQuerie.dbml</DependentUpon>
-    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -105,9 +97,6 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Scheduled3DataSet.xsd</DependentUpon>
     </Compile>
-    <None Include="DatabaseQuerie.dbml.layout">
-      <DependentUpon>DatabaseQuerie.dbml</DependentUpon>
-    </None>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -129,11 +118,6 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <None Include="DatabaseQuerie.dbml">
-      <Generator>MSLinqToSQLGenerator</Generator>
-      <LastGenOutput>DatabaseQuerie.designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -181,6 +165,7 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="DBlocation.txt" />
     <Content Include="mp.ico" />
     <Content Include="mp_large.ico" />
     <Content Include="Scheduled3.accdb">
